update side bar divs to columns. update css to include color in well and background image to column.

--- a/index.html
+++ b/index.html
@@ -14,35 +14,39 @@
         <h1>Ping Pong</h1>
         <h2>Numbers Game</h2>
       </div>
-      <div class="side-bar">
-        <h3>About Ping Pong</h3>
-        <h4>Created by:</h4>
-        <p>Nicole Santamaria</p>
-        <h4>GitHub Username/URL:</h4>
-        <p><a href="https://github.com/nrsantamaria">nrsantamaria</a></p>
-        <h4>Week 3: Arrays & Looping Test for:</h4>
-        <p>Intro to Programming: JavaScript</p>
-      </div>
-      <div class="main">
-        <h2>How to Play:</h2>
-        <ul>
-          <li>Enter a number in the field below.</li>
-          <li>Your number will appear in a list at the bottom of the page.</li>
-        </ul>
-        <p><strong>There are a few exceptions to how your number will appear on the page:</strong></p>
-        <ul>
-          <li>If you number is divisible by 3 it will become "ping"</li>
-          <li>If your number is divisible by 5 it will become "pong"</li>
-          <li>If your number is divisble by 3 and 5 it will become "pingpong"</li>
-        </ul>
-        <form id="number-form">
-          <label for="number">Enter your number here:</label>
-          <input type="number" name="number" min="1">
-          <input type="submit">
-        </form>
-        <div>
-          <ul class="results">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="well">
+            <h3>About Ping Pong</h3>
+            <h4>Created by:</h4>
+            <p>Nicole Santamaria</p>
+            <h4>GitHub Username/URL:</h4>
+            <p><a href="https://github.com/nrsantamaria">nrsantamaria</a></p>
+            <h4>Week 3: Arrays & Looping Test for:</h4>
+            <p>Intro to Programming: JavaScript</p>
+          </div>
+        </div>
+        <div class="col-sm-8">
+          <h2>How to Play:</h2>
+          <ul>
+            <li>Enter a number in the field below.</li>
+            <li>Your number will appear in a list at the bottom of the page.</li>
           </ul>
+          <p><strong>There are a few exceptions to how your number will appear on the page:</strong></p>
+          <ul>
+            <li>If you number is divisible by 3 it will become "ping"</li>
+            <li>If your number is divisible by 5 it will become "pong"</li>
+            <li>If your number is divisble by 3 and 5 it will become "pingpong"</li>
+          </ul>
+          <form id="number-form">
+            <label for="number">Enter your number here:</label>
+            <input type="number" name="number" min="1">
+            <input type="submit">
+          </form>
+          <div>
+            <ul class="results">
+            </ul>
+          </div>
         </div>
       </div>
     </div>
