update specs on README.md

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/jquery-3.2.0.js"></script>
@@ -21,7 +22,7 @@
             <h4>Created by:</h4>
             <p>Nicole Santamaria</p>
             <h4>GitHub Username/URL:</h4>
-            <p><a href="https://github.com/nrsantamaria">nrsantamaria</a></p>
+            <p><a href="https://github.com/nrsantamaria" target="_blank">nrsantamaria</a></p>
             <h4>Week 3: Arrays & Looping Test for:</h4>
             <p>Intro to Programming: JavaScript</p>
           </div>
