--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Ping Pong Numbers Game</title>
@@ -41,7 +41,7 @@
           </ul>
           <form id="number-form">
             <label for="number">Enter your number here:</label>
-            <input type="number" name="number" min="1">
+            <input type="number" name="number" min="1" id="number">
             <input type="submit">
           </form>
           <div>
