add gulp packages

--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
             <input type="number" name="number" min="1" id="number">
             <input type="submit">
           </form>
+          <form id="signup">
+            <label for="email">Enter your email:</label>
+            <input id="email" type="text">
+            <button type="submit">Submit</button>
+          </form>
           <div>
-            <ul class="results">
-            </ul>
+            <ul id="solution"></ul>
+            <ul class="results"></ul>
           </div>
         </div>
       </div>
