--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/moment/min/moment.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Ping Pong Numbers Game</title>
@@ -18,6 +21,8 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="well">
+            <h3>Well look at the time! </h3>
+            <h4 id="time"></h4>
             <h3>About Ping Pong</h3>
             <h4>Created by:</h4>
             <p>Nicole Santamaria</p>
