--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="well">
-            <h3>Well look at the time! </h3>
-            <h4 id="time"></h4>
             <h3>About Ping Pong</h3>
             <h4>Created by:</h4>
             <p>Nicole Santamaria</p>
             <h4>GitHub Username/URL:</h4>
             <p><a href="https://github.com/nrsantamaria" target="_blank">nrsantamaria</a></p>
-            <h4>Week 3: Arrays & Looping Test for:</h4>
-            <p>Intro to Programming: JavaScript</p>
+            <h3>Well look at the time! </h3>
+            <h4 id="time"></h4>
+            <h3>Weather:</h3>
+            <a href="weather.html">Click for the weather...</a>
           </div>
         </div>
         <div class="col-sm-8">
